[tool.poetry]
name = "k-means-clustering-ga"
version = "0.1.0"
description = "The project aims to implement K-means clustering with genetic algorithm to optimize the clustering process."
authors = ["Alen Šaruga"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.4"
niapy = "^2.1.0"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
